-
Bug
-
Resolution: Fixed
-
P1: Critical
-
None
-
6.9.0
-
None
-
Manjaro latest KDE6 Plasma Desktop with X11
-
-
6287641b6 (130-based), 40082d1a8 (134-based-refactor)
Manjaro Linux stable recently updated to Qt 6.9.0 from Qt 6.8.2 and under X11 all of my Qt6 webengine apps are failing after launch and briefly showing on the screen with the following error message ( using kmail as an example: )
[2018:2066:0412/124000.991759:ERROR:gpu_memory_buffer_support_x11.cc(134)] Can't create buffer -- unsupported config: usage=SCANOUT, format=BGRA_8888 Failed to create GBM buffer for GLX. *** KMail got signal 6 (Exiting) *** Dead letters dumped. KCrash: Application 'kmail' crashing... crashRecursionCounter = 2 zsh: IOT instruction (core dumped) kmail
Even the Qt6 official simplebrowser example fails with the same error message:
[3068:3107:0412/125246.903050:ERROR:gpu_memory_buffer_support_x11.cc(134)] Can't create buffer -- unsupported config: usage=SCANOUT, format=BGRA_8888
Failed to create GBM buffer for GLX.
zsh: IOT instruction (core dumped) ./simplebrowser
Given the error seems to be in gpu_memory_buffer_support_x11.cc(134), I then rebooted my system in Wayland and then it all works.
I am using an AMDGPU system, I will add my qtdiag6 output in case it might provide a clue.
None of these errors happened under Qt 6.8.2-3, which was the previous version used in Manjaro stable.
- relates to
-
QTBUG-136122 KMail Crash
-
- Closed
-
| For Gerrit Dashboard: QTBUG-135935 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 641190,4 | [gbm] Add fallback for drmPrimeHandleToFD() | 130-based | qt/qtwebengine-chromium | Status: MERGED | +2 | 0 |