[gbm] Add fallback for drmPrimeHandleToFD()

drmPrimeHandleToFD() does not seem to work with legacy radeon driver and
returns invalid fd and it may cause QtWebEngine crash.

Chromium replaced gbm_bo_get_plane_fd() with drmPrimeHandleToFD() to
provide file descriptors per plane basis, see https://crrev.com/c/1273059

Since then, Mesa introduced new GBM API to provide fds per plane basis,
see https://gitlab.freedesktop.org/mesa/mesa/-/merge_requests/5442

To keep legacy GPU drivers supported, use the new GBM API as a fallback
if the drmPrimeHandleToFD() fails.

Fixes: QTBUG-135935
Change-Id: I79f54f861916d3b19f743cab183f756657094b09
Done-with: Kevin B. Hendricks
Reviewed-on: https://codereview.qt-project.org/c/qt/qtwebengine-chromium/+/641190
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>